--- a/src/layouts/main/Main.css
+++ b/src/layouts/main/Main.css
@@ -1,3 +1,24 @@
+main {
+    flex-grow: 1;
+    padding: 20px;
+}
+.body{
+    background-color: #222;
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    display: flex;
+    min-height: 100vh;
+}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.selected {
+    background-color: #f0e68c;
+    color: black;
+}
 aside {
     background-color: #333;
     padding: 20px;
