--- a/src/pages/games/Games.css
+++ b/src/pages/games/Games.css
@@ -1,6 +1,6 @@
 .game-box-container{
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     margin: 10px;
     background-color: #666;
     border: 2px solid #f0e68c; /* borda amarela */
@@ -11,11 +11,11 @@
     height: 80%;
 }
 .game-box-title{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+}
+.game-box-title p{
+    padding: 0;
+    margin: 0;
 }
 .game-box-container {
     text-decoration: none;
@@ -31,5 +31,10 @@
 
 .campo-minado{
     background-image: url(../../imgs/campo_minado.png);
+    background-size: cover;
+}
+
+.campo-minado-speedrun{
+    background: url(../../imgs/fogo-desenho.png), url(../../imgs/campo_minado.png);
     background-size: cover;
 }
