--- a/src/pages/campo_minado/components/cell/Cell.css
+++ b/src/pages/campo_minado/components/cell/Cell.css
@@ -1,11 +1,11 @@
 .cell {
-    width: 30px;
-    height: 30px;
-    border: 1px solid #ccc;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 30px;
-    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .open{
