--- a/src/pages/campo_minado/basic/CampoMinado.css
+++ b/src/pages/campo_minado/basic/CampoMinado.css
@@ -3,3 +3,23 @@
     flex-direction: column;
     align-items: center;
 }
+.container-playagain {
+    margin-top: 50px;
+}
+.container-playagain button{
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #fce300;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+    color: black;
+    transition: all 100ms;
+}
+.container-playagain button:hover {
+    background-color: #f1e256;
+    transform: scale(1.1);
+}
