--- a/src/pages/ranking/Ranking.css
+++ b/src/pages/ranking/Ranking.css
@@ -1,24 +1,37 @@
 .ranking-container {
     padding: 20px;
+    width: 80%;
 }
 
 .ranking-table {
     width: 100%;
+    margin-top: 20px;
+}
+.ranking-table table{
     border-collapse: collapse;
+    width: 100%;
 }
-
-.ranking-table th,
-.ranking-table td {
-    border: 1px solid #ddd;
-    background-color: #f2f2f2;
+.ranking-table th, .ranking-table td{
     padding: 8px;
-}
-
-.ranking-table th {
-    background-color: #f2f2f2;
     text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+.ranking-table tbody tr{
+    transition: background-color 0.3s ease;
 }
 
-.ranking-table tr {
-    color: black;
+/* .ranking-table tbody tr:hover {background-color: #f0e68c; color: black;} */
+
+.ranking-table .container_medalha img{
+    width: 50px;
+    height: 50px;
+}
+.ranking-table tbody .posicao{
+    font-size: xx-large;
+}
+.ranking-table tbody .posicao strong{
+    margin-left: 15px;
+}
+.ranking-filtro {
+    margin-top: 50px;
 }
