--- a/src/pages/campo_minado/basic/CampoMinado.css
+++ b/src/pages/campo_minado/basic/CampoMinado.css
@@ -2,9 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: solid 5px rgb(77, 76, 76);
+    width: 90%;
+    padding: 10px;
 }
 .container-playagain {
     margin-top: 50px;
+    margin-bottom: 20px;
 }
 .container-playagain button{
     padding: 10px 20px;
@@ -22,4 +26,12 @@
 .container-playagain button:hover {
     background-color: #f1e256;
     transform: scale(1.1);
+}
+.campo-minado-container .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    border-bottom: solid 5px rgb(77, 76, 76);
+    margin-bottom: 50px;
 }
