--- a/src/pages/campominado/components/Timer/Timer.css
+++ b/src/pages/campominado/components/Timer/Timer.css
@@ -1,6 +1,7 @@
 .retro-timer {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1rem;
+    font-size: 2.5rem;
+    padding: 10px;
     background-color: #333;
     color: #ff3333;
     border: 4px solid #999;
@@ -13,4 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
+  
+  
