--- a/src/pages/campominado/CampoMinado.css
+++ b/src/pages/campominado/CampoMinado.css
@@ -7,7 +7,12 @@
     background-color: #2e2e2e;
     padding: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.container-campo .content .game{
+    display: flex;
     flex-direction: column;
+    align-items: center;
 }
