--- a/src/pages/campominado/components/Cell/Cell.css
+++ b/src/pages/campominado/components/Cell/Cell.css
@@ -13,6 +13,9 @@
 .open{
     background-color: silver;
 }
+.mine{
+    background-color: rgb(247, 73, 73);
+}
 .n1{
     background-color: #98FB98;
 }
